--- a/src/contacty.html
+++ b/src/contacty.html
@@ -76,7 +76,7 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">ХАРКІВ (096) 054-27-70</a>
+                <a class="telephone" href="tel:+380960542770">ХАРКІВ, ЛОЗОВА (096) 054-27-70</a>
               </li>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380660227720">
@@ -287,7 +287,7 @@
           <div class="col p-5 m-3 mb-5 contacts fill">
             <h5 class="text-center green"><b>ХОРЕКА</b></h5>
             <div class="container hr-line-contacts"></div>
-            <h6><b>ХАРКІВ</b></h6>
+            <h6><b>ХАРКІВ, ЛОЗОВА, ПАВЛОГРАД</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
@@ -352,10 +352,10 @@
             <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
             <div class="container hr-line-contacts"></div>
             <h6>
-              Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари, Біла
-              Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
-              Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
-              Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
+              Встановлення вендінгового обладнання по містах: Київ, Харків, Бровари,
+                Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
+                Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
+                Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
             </h6>
             <ul>
               <li class="text-nowrap tel">
@@ -432,114 +432,114 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-    <footer class="footer">
-      <div class="footer-items">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-6 p-4 offset-md-1">
-              <h6>ХОРЕКА</h6>
-              <p class="footer-left">
-                Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
-                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
-                Вінниця, Івано-Франківськ, Шепетівка.
-              </p>
-              <div class="row">
-                <div class="col col-md-6 footer-left">
-                  <h6>Харків</h6>
-                  <a class="telephone text-nowrap" href="tel:+380960542770">
-                    т. +38 (096) 054-27-70
-                  </a>
-                </div>
-                <div class="col col-md-6 footer-left">
-                  <h6>Київ, Рівне</h6>
-                  <a class="telephone text-nowrap" href="tel:+380660227720">
-                    т. +38 (066) 022-77-20
-                  </a>
-                </div>
+  <footer class="footer">
+    <div class="footer-items">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-6 p-4 offset-md-1">
+            <h6>ХОРЕКА</h6>
+            <p class="footer-left">
+              Встановлення кавових машин по містах: Київ, Харків, Біла Церква, Бориспіль, Бровари, Вінниця,
+              Івано-Франківськ, Лозова, Павлоград, Рівне, Тернопіль, Умань, Хмельницький, Черкаси, Чернігів, Шепетівка.
+            </p>
+            <div class="row">
+              <div class="col col-md-6 footer-left">
+                <h6>Харків, Лозова, Павлоград</h6>
+                <a class="telephone text-nowrap" href="tel:+380960542770">
+                  т. +38 (096) 054-27-70
+                </a>
               </div>
-              <div class="row">
-                <div class="col footer-left">
-                  <h6>Біла Церква, Умань</h6>
-                  <a class="telephone text-nowrap" href="tel:+380504400492">
-                    т. +38 (050) 440-04-92
-                  </a>
-                </div>
-                <div class="col footer-left">
-                  <h6>Бровари, Бориспіль</h6>
-                  <a class="telephone text-nowrap" href="tel:+380989700921">
-                    т. +38 (073) 510-31-30
-                  </a>
-                </div>
+              <div class="col col-md-6 footer-left">
+                <h6>Київ, Рівне</h6>
+                <a class="telephone text-nowrap" href="tel:+380660227720">
+                  т. +38 (066) 022-77-20
+                </a>
               </div>
-              <div class="row">
-                <div class="col footer-left">
-                  <h6>Черкаси</h6>
-                  <a class="telephone text-nowrap" href="tel:+380989700929">
-                    т. +38 (098) 970-09-29
-                  </a>
-                </div>
-                <div class="col footer-left">
-                  <h6>Чернігів</h6>
-                  <a class="telephone text-nowrap" href="tel:+380937909048">
-                    т. +38 (093) 790-90-48
-                  </a>
-                </div>
-                <div class="col footer-left">
-                  <h6>Хмельницький, Тернопіль, Вінниця, Івано-Франківськ, Шепетівка</h6>
-                  <a class="telephone text-nowrap" href="tel:+380974996005">
-                    т. +38 (097) 499-60-05
-                  </a>
-                </div>
-              </div>
-              <!-- <div class="row">
-                              <div class="col footer-left">
-                                  <h6>e-mail</h6>
-                                  <a class="telephone text-nowrap"
-                                      href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
-                              </div>
-                          </div> -->
             </div>
-            <div class="col-lg-4 col-6 p-4 offset-md-2">
-              <div class="footer-left">
-                <h6>ВЕНДІНГ</h6>
-                <p>
-                  Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари,
-                  Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
-                  Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
-                  Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
-                </p>
+            <div class="row">
+              <div class="col footer-left">
+                <h6>Біла Церква, Умань</h6>
+                <a class="telephone text-nowrap" href="tel:+380504400492">
+                  т. +38 (050) 440-04-92
+                </a>
               </div>
-              <h6>Менеджер з розвитку</h6>
-              <p class="footer-left">
-                <a class="telephone text-nowrap" href="tel:+380950252822">
-                  т. +38 (095) 025-28-22
+              <div class="col footer-left">
+                <h6>Бровари, Бориспіль</h6>
+                <a class="telephone text-nowrap" href="tel:+380989700921">
+                  т. +38 (073) 510-31-30
                 </a>
-              </p>
-              <h6>Ел.адреса для запитань, зауважень та пропозицій:</h6>
-              <p class="footer-left">
-                <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
-                  support@bianchiprof.com
+              </div>
+            </div>
+            <div class="row">
+              <div class="col footer-left">
+                <h6>Черкаси</h6>
+                <a class="telephone text-nowrap" href="tel:+380989700929">
+                  т. +38 (098) 970-09-29
                 </a>
-              </p>
-              <h6>Юридична інформація</h6>
+              </div>
+              <div class="col footer-left">
+                <h6>Чернігів</h6>
+                <a class="telephone text-nowrap" href="tel:+380937909048">
+                  т. +38 (093) 790-90-48
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Хмельницький, Тернопіль, Вінниця, Івано-Франківськ, Шепетівка</h6>
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  т. +38 (097) 499-60-05
+                </a>
+              </div>
+            </div>
+
+            <!-- <div class="row">
+                            <div class="col footer-left">
+                                <h6>e-mail</h6>
+                                <a class="telephone text-nowrap"
+                                    href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                            </div>
+                        </div> -->
+          </div>
+          <div class="col-lg-4 col-6 p-4 offset-md-2">
+            <div class="footer-left">
+              <h6>ВЕНДІНГ</h6>
               <p>
-                <a class="telephone text-nowrap" href="./legal_terms.html">
-                  Умови використання сайту
-                </a>
-              </p>
-              <p>
-                <a class="telephone text-nowrap" href="./privacy_policy.html">
-                  Політика конфіденційності
-                </a>
+                Встановлення вендінгового обладнання по містах: Київ, Харків, Бровари,
+                Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
+                Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
+                Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
               </p>
             </div>
+            <h6>Менеджер з розвитку</h6>
+            <p class="footer-left">
+              <a class="telephone text-nowrap" href="tel:+380950252822">
+                т. +38 (095) 025-28-22
+              </a>
+            </p>
+            <h6>Ел.адреса для запитань, зауважень та пропозицій:</h6>
+            <p class="footer-left">
+              <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
+                support@bianchiprof.com
+              </a>
+            </p>
+            <h6>Юридична інформація</h6>
+            <p>
+              <a class="telephone text-nowrap" href="./legal_terms.html">
+                Умови використання сайту
+              </a>
+            </p>
+            <p>
+              <a class="telephone text-nowrap" href="./privacy_policy.html">
+                Політика конфіденційності
+              </a>
+            </p>
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator p-1">
-        <h6><small>© 2016-2025 Bianchi professional</small></h6>
-      </div>
-    </footer>
+    </div>
+    <div class="d-flex justify-content-center separator p-1">
+      <h6><small>© 2016-2025 Bianchi professional</small></h6>
+    </div>
+  </footer>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
