--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -77,7 +77,7 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380960542770">
-                  ХАРЬКОВ (096) 054-27-70
+                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
                 </a>
               </li>
               <li class="telephone text-nowrap">
@@ -289,7 +289,7 @@
           <div class="col p-5 m-3 mb-5 contacts fill">
             <h5 class="text-center green"><b>ХОРЕКА</b></h5>
             <div class="container hr-line-contacts"></div>
-            <h6><b>ХАРКОВ</b></h6>
+            <h6><b>ХАРКОВ, ЛОЗОВАЯ, ПАВЛОГРАД</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
@@ -437,115 +437,116 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-  <footer class="footer">
-    <div class="footer-items">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-6 p-4 offset-md-1">
-            <h6>ХОРЕКА</h6>
-            <p class="footer-left">
-              Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-              Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь, Ивано-Франковск, Винница, Шепетовка
-            </p>
-            <div class="row">
-              <div class="col col-md-6 footer-left">
-                <h6>Харьков</h6>
-                <a class="telephone text-nowrap" href="tel:+380960542770">
-                  т. +38 (096) 054-27-70
-                </a>
+    <footer class="footer">
+      <div class="footer-items">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-6 p-4 offset-md-1">
+              <h6>ХОРЕКА</h6>
+              <p class="footer-left">
+                Установка кофемашин по городам: Киев, Харьков, Борисполь
+                Бровары, Винница, Ивано-Франковск, Лозовая,Павлоград,
+                Тернополь, Умань, Хмельницкий, Церковь, Черкассы, Шепетовка
+                </p>
+              <div class="row">
+                <div class="col col-md-6 footer-left">
+                  <h6>Харьков, Лозовая, Павлоград</h6>
+                  <a class="telephone text-nowrap" href="tel:+380960542770">
+                    т. +38 (096) 054-27-70
+                  </a>
+                </div>
+                <div class="col col-md-6 footer-left">
+                  <h6>Киев, Ровно</h6>
+                  <a class="telephone text-nowrap" href="tel:+380660227720">
+                    т. +38 (066) 022-77-20
+                  </a>
+                </div>
               </div>
-              <div class="col col-md-6 footer-left">
-                <h6>Киев, Ровно</h6>
-                <a class="telephone text-nowrap" href="tel:+380660227720">
-                  т. +38 (066) 022-77-20
-                </a>
+              <div class="row">
+                <div class="col footer-left">
+                  <h6>Белая Церковь, Умань</h6>
+                  <a class="telephone text-nowrap" href="tel:+380504400492">
+                    т. +38 (050) 440-04-92
+                  </a>
+                </div>
+                <div class="col footer-left">
+                  <h6>Бровары, Борисполь</h6>
+                  <a class="telephone text-nowrap" href="tel:+380735103130">
+                    т. +38 (073) 510-31-30
+                  </a>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col footer-left">
-                <h6>Белая Церковь, Умань</h6>
-                <a class="telephone text-nowrap" href="tel:+380504400492">
-                  т. +38 (050) 440-04-92
-                </a>
+              <div class="row">
+                <div class="col footer-left">
+                  <h6>Черкассы</h6>
+                  <a class="telephone text-nowrap" href="tel:+380989700929">
+                    т. +38 (098) 970-09-29
+                  </a>
+                </div>
+                <div class="col footer-left">
+                  <h6>Чернигов</h6>
+                  <a class="telephone text-nowrap" href="tel:+380974996005">
+                    т. +38 (097) 499-60-05
+                  </a>
+                </div>
               </div>
-              <div class="col footer-left">
-                <h6>Бровары, Борисполь</h6>
-                <a class="telephone text-nowrap" href="tel:+380735103130">
-                  т. +38 (073) 510-31-30
-                </a>
+              <div class="row">
+                <div class="col footer-left">
+                  <h6>Хмельницкий, Тернополь, Винница, Ивано-Франковск, Шепетовка</h6>
+                  <a class="telephone text-nowrap" href="tel:+380974996005">
+                    т. +38 (097) 499-60-05
+                  </a>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col footer-left">
-                <h6>Черкассы</h6>
-                <a class="telephone text-nowrap" href="tel:+380989700929">
-                  т. +38 (098) 970-09-29
-                </a>
-              </div>
-              <div class="col footer-left">
-                <h6>Чернигов</h6>
-                <a class="telephone text-nowrap" href="tel:+380974996005">
-                  т. +38 (097) 499-60-05
-                </a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col footer-left">
-                <h6>Хмельницкий, Тернополь, Винница, Ивано-Франковск, Шепетовка</h6>
-                <a class="telephone text-nowrap" href="tel:+380974996005">
-                  т. +38 (097) 499-60-05
-                </a>
-              </div>
-            </div>
-            <!-- <div class="row">
+              <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div> -->
-          </div>
-          <div class="col-lg-4 col-6 p-4 offset-md-2">
-            <div class="footer-left">
-              <h6>ВЕНДИНГ</h6>
+            </div>
+            <div class="col-lg-4 col-6 p-4 offset-md-2">
+              <div class="footer-left">
+                <h6>ВЕНДИНГ</h6>
+                <p>
+                  Установка вендингового оборудования по городам: Харьков, Киев, Бровары,
+                  Белая Церковь, Полтава, Николаев, Днепр, Запорожье, Ровно, Львов, Луцк,
+                  Тернополь, Каменец-Подольский, Ивано-Франковск, Черновцы, Винница,
+                  Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
+                </p>
+              </div>
+              <h6>Менеджер по развитию</h6>
+              <p class="footer-left">
+                <a class="telephone text-nowrap" href="tel:+380950252822">
+                  т. +38 (095) 025-28-22
+                </a>
+              </p>
+              <h6>Эл.адрес для вопросов, замечаний и предложений:</h6>
+              <p class="footer-left">
+                <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
+                  support@bianchiprof.com
+                </a>
+              </p>
+              <h6>Юридическая информация</h6>
               <p>
-                Установка вендингового оборудования по городам: Харьков, Киев, Бровары,
-                Белая Церковь, Полтава, Николаев, Днепр, Запорожье, Ровно, Львов, Луцк,
-                Тернополь, Каменец-Подольский, Ивано-Франковск, Черновцы, Винница,
-                Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
+                <a class="telephone text-nowrap" href="./legal_terms.html">
+                  Условия использования сайта
+                </a>
+              </p>
+              <p>
+                <a class="telephone text-nowrap" href="./privacy_policy.html">
+                  Политика конфиденциальности
+                </a>
               </p>
             </div>
-            <h6>Менеджер по развитию</h6>
-            <p class="footer-left">
-              <a class="telephone text-nowrap" href="tel:+380950252822">
-                т. +38 (095) 025-28-22
-              </a>
-            </p>
-            <h6>Эл.адрес для вопросов, замечаний и предложений:</h6>
-            <p class="footer-left">
-              <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
-                support@bianchiprof.com
-              </a>
-            </p>
-            <h6>Юридическая информация</h6>
-            <p>
-              <a class="telephone text-nowrap" href="./legal_terms.html">
-                Условия использования сайта
-              </a>
-            </p>
-            <p>
-              <a class="telephone text-nowrap" href="./privacy_policy.html">
-                Политика конфиденциальности
-              </a>
-            </p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="d-flex justify-content-center separator p-1">
-      <h6><small>© 2016-2025 Bianchi professional</small></h6>
-    </div>
-  </footer>
+      <div class="d-flex justify-content-center separator p-1">
+        <h6><small>© 2016-2025 Bianchi professional</small></h6>
+      </div>
+    </footer>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
