--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -65,10 +65,14 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">ХАРЬКОВ (096) 054-27-70</a>
+                <a class="telephone" href="tel:+380960542770">
+                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
+                </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380660227720">КИЕВ, РОВНО (066) 022-77-20</a>
+                <a class="telephone" href="tel:+380660227720">
+                  КИЕВ, РОВНО (066) 022-77-20
+                </a>
               </li>
             </ul>
           </div>
@@ -97,10 +101,14 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380504400492">Б.ЦЕРКОВЬ, УМАНЬ (050) 440-04-92</a>
+                <a class="telephone" href="tel:+380504400492">
+                  Б.ЦЕРКОВЬ, УМАНЬ (050) 440-04-92
+                </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380989700929">ЧЕРКАССЫ (098) 970-09-29</a>
+                <a class="telephone text-nowrap" href="tel:+380989700929">
+                  ЧЕРКАССЫ (098) 970-09-29
+                </a>
               </li>
             </ul>
           </div>
@@ -127,8 +135,9 @@
             </ul>
           </div>
           <div class="header__item col">
-            <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">Оставить
-              заявку</button>
+            <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">
+              Оставить заявку
+            </button>
           </div>
         </div>
       </div>
@@ -658,12 +667,13 @@
           <div class="col-lg-4 col-6 p-4 offset-md-1">
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
-              Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-              Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь, Ивано-Франковск, Винница, Шепетовка
+              Установка кофемашин по городам: Киев, Харьков, Борисполь
+              Бровары, Винница, Ивано-Франковск, Лозовая,Павлоград,
+              Тернополь, Умань, Хмельницкий, Церковь, Черкассы, Шепетовка
             </p>
             <div class="row">
               <div class="col col-md-6 footer-left">
-                <h6>Харьков</h6>
+                <h6>Харьков, Лозовая, Павлоград</h6>
                 <a class="telephone text-nowrap" href="tel:+380960542770">
                   т. +38 (096) 054-27-70
                 </a>
