--- a/src/legal_terms.html
+++ b/src/legal_terms.html
@@ -65,7 +65,7 @@
           <div class="header__item col">
             <ul>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380960542770">ХАРКІВ (096) 054-27-70</a>
+                <a class="telephone" href="tel:+380960542770">ХАРКІВ, ЛОЗОВА (096) 054-27-70</a>
               </li>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380660227720">
@@ -532,13 +532,12 @@
           <div class="col-lg-4 col-6 p-4 offset-md-1">
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
-              Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
-              Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
-              Вінниця, Івано-Франківськ, Шепетівка.
+              Встановлення кавових машин по містах: Київ, Харків, Біла Церква, Бориспіль, Бровари, Вінниця,
+              Івано-Франківськ, Лозова, Павлоград, Рівне, Тернопіль, Умань, Хмельницький, Черкаси, Чернігів, Шепетівка.
             </p>
             <div class="row">
               <div class="col col-md-6 footer-left">
-                <h6>Харків</h6>
+                <h6>Харків, Лозова, Павлоград</h6>
                 <a class="telephone text-nowrap" href="tel:+380960542770">
                   т. +38 (096) 054-27-70
                 </a>
@@ -596,7 +595,7 @@
             <div class="footer-left">
               <h6>ВЕНДІНГ</h6>
               <p>
-                Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари,
+                Встановлення вендінгового обладнання по містах: Київ, Харків, Бровари,
                 Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
                 Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
                 Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
