--- a/src/ru/arenda.html
+++ b/src/ru/arenda.html
@@ -79,7 +79,7 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone" href="tel:+380960542770">
-                  ХАРЬКОВ (096) 054-27-70
+                  ХАРЬКОВ, ЛОЗОВАЯ (096) 054-27-70
                 </a>
               </li>
               <li class="telephone text-nowrap">
@@ -1355,12 +1355,13 @@
           <div class="col-lg-4 col-6 p-4 offset-md-1">
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
-              Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-              Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь, Ивано-Франковск, Винница, Шепетовка
+              Установка кофемашин по городам: Киев, Харьков, Борисполь
+              Бровары, Винница, Ивано-Франковск, Лозовая,Павлоград,
+              Тернополь, Умань, Хмельницкий, Церковь, Черкассы, Шепетовка
             </p>
             <div class="row">
               <div class="col col-md-6 footer-left">
-                <h6>Харьков</h6>
+                <h6>Харьков, Лозовая, Павлоград</h6>
                 <a class="telephone text-nowrap" href="tel:+380960542770">
                   т. +38 (096) 054-27-70
                 </a>
