Правки кофемашины автоматы

--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content= />
-  <meta name="keywords" content= />
+  <meta name="description" content=""/>
+  <meta name="keywords" content=""/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Кавомашина зернова в оренду для магазинів, торгівельних мереж, офісів, АЗС</title>
   <link rel="icon" href="./favicon.png" type="image/x-icon" />
@@ -272,7 +272,6 @@
       <li class="breadcrumb-item active" aria-current="page">Зернові кавомашини автомат</li>
     </ol>
   </nav>
-
   <div class="d-flex justify-content-center separator p-1">
     <h1>Кавові апарати в оренду</h1>
   </div>
@@ -310,7 +309,7 @@
   <div class="container hr-line"></div>
   <div class="container cards">
     <div class="row">
-      <div id="anhcor-gaia-touch" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-gaia-touch" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="кавоварка на зернах" />
@@ -385,7 +384,7 @@
           </div>
         </div>
       </div>
-      <div id="anhcor-gaia-style" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-gaia-style" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="кавоварка зернова" />
@@ -431,11 +430,13 @@
             <br />
             <small>
               <p class="lh-sm">
-                Це стильна та функціональна кавомашина, розроблена для використання у місцях з великим потоком людей. 
-                Вона забезпечує швидке приготування різних кавових напоїв, завдяки надійним компонентам та простому управлінню.
+                Це стильна та функціональна кавомашина, розроблена для використання у місцях з великим потоком людей.
+                Вона забезпечує швидке приготування різних кавових напоїв, завдяки надійним компонентам та простому
+                управлінню.
               </p>
               <p class="lh-sm">
-                Завдяки високій зоні видачі напоїв, ця кавомашина підходить для великих чашок, що робить її універсальним вибором для офісів, магазинів та кафе.
+                Завдяки високій зоні видачі напоїв, ця кавомашина підходить для великих чашок, що робить її
+                універсальним вибором для офісів, магазинів та кафе.
               </p>
               <p class="lh-sm">
                 Вона також має вбудований резервуар для води на 3,6 літри, що дозволяє працювати автономно.
@@ -455,7 +456,7 @@
           </div>
         </div>
       </div>
-      <div id="anhcor-talia-touch" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-talia-touch" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/TaliaTouch.webp" class="card-img-top" alt="кавомашина для магазину" />
@@ -527,8 +528,7 @@
           </div>
         </div>
       </div>
-
-      <div id="anhcor-coro" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-coro" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/necta.webp" class="card-img-top" alt="автоматична кавомашина" />
@@ -574,14 +574,17 @@
             <br />
             <small>
               <p class="lh-sm">
-                Це інноваційна кавомашина, яка поєднує в собі стильний дизайн та передові технології. Ця модель призначена для офісів, готелів, ресторанів та 
+                Це інноваційна кавомашина, яка поєднує в собі стильний дизайн та передові технології. Ця модель
+                призначена для офісів, готелів, ресторанів та
                 інших комерційних закладів, де потрібне швидке та якісне приготування кавових напоїв.
               </p>
               <p class="lh-sm">
-                Necta Coro Prime здатна приготувати різноманітні напої, включаючи еспресо, капучино та лате, завдяки інтуїтивному інтерфейсу та високоточній системі дозування.
+                Necta Coro Prime здатна приготувати різноманітні напої, включаючи еспресо, капучино та лате, завдяки
+                інтуїтивному інтерфейсу та високоточній системі дозування.
               </p>
               <p class="lh-sm">
-                Кавомашина відрізняється надійністю, простотою в обслуговуванні та здатністю працювати в умовах інтенсивного використання, що робить її ідеальним вибором для бізнесу.
+                Кавомашина відрізняється надійністю, простотою в обслуговуванні та здатністю працювати в умовах
+                інтенсивного використання, що робить її ідеальним вибором для бізнесу.
               </p>
               <p class="lh-sm">
                 Від 15 чашок в день.
@@ -595,8 +598,7 @@
           </div>
         </div>
       </div>
-
-      <div id="anhcor-korinto" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-korinto" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/necta_korinto.webp" class="card-img-top" alt="кавомашина в оренду" />
@@ -644,7 +646,8 @@
               <p class="lh-sm">
                 Korinto Prime – це нова елегантна модель, з сімейства Necta Horeca.
               </p>
-              <p class="lh-sm">Вона здатна приготувати широкий спектр напоїв, від еспресо до капучино, завдяки інтуїтивно зрозумілому 
+              <p class="lh-sm">Вона здатна приготувати широкий спектр напоїв, від еспресо до капучино, завдяки
+                інтуїтивно зрозумілому
                 інтерфейсу та можливості програмування напоїв під різні смаки. </p>
               <p class="lh-sm">Велика висота видачі (145 мм)</p>
               <p class="lh-sm">Контейнер для розчинних продуктів.</p>
@@ -665,8 +668,7 @@
           </div>
         </div>
       </div>
-
-      <div id="anhcor-cino" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-cino" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/CompactCino.webp" class="card-img-top" alt="кавова машина для бізнесу" />
@@ -712,7 +714,8 @@
             <br />
             <small>
               <p class="lh-sm">
-                Поєднує високу якість, просте керування та стильний дизайн, забезпечуючи широкий вибір кавових напоїв одним натисканням кнопки.
+                Поєднує високу якість, просте керування та стильний дизайн, забезпечуючи широкий вибір кавових напоїв
+                одним натисканням кнопки.
               </p>
               <p class="lh-sm">Готує до 10 напоїв: еспресо, американо, капучино, латте, гарячий шоколад та інші</p>
               <p class="lh-sm">Компактні розміри: легко розміщується навіть у обмеженому просторі</p>
@@ -731,16 +734,10 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-  
-  <div class="container cards">
-    <div class="row">
-      <div id="anhcor-easy" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-easy" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
-            <img src="./img/avtomaty/Rheavendors Easy.webp" class="card-img-top" alt="кавоварка на зернах" />
+            <img src="./img/avtomaty/Rheavendors_Easy.webp" class="card-img-top" alt="кавоварка на зернах" />
             <figcaption class="machine">
               <ul class="lh-sm">
                 <li>
@@ -783,13 +780,14 @@
             <br />
             <small>
               <p class="lh-sm">
-                Завдяки зручному інтерфейсу користувача та мінімалістичному дизайну, Easy легко інтегрується в будь-який інтер'єр Й забезпечує стабільний результат — чашка за чашкою.
+                Завдяки зручному інтерфейсу користувача та мінімалістичному дизайну, Easy легко інтегрується в будь-який
+                інтер'єр Й забезпечує стабільний результат — чашка за чашкою.
               </p>
               <p class="lh-sm">
                 Виробляє 10 продуктів на основі зернової кави Й розчинних напоїв (молоко, шоколад).
               </p>
               <p class="lh-sm">
-                Складна підставка для чашок різних розмірів. 
+                Складна підставка для чашок різних розмірів.
               </p>
               <p class="lh-sm">Просте обслуговування й очищення</p>
               <p class="lh-sm">
@@ -804,7 +802,7 @@
           </div>
         </div>
       </div>
-      <div id="anhcor-riawendors" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-riawendors" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/riawendors.webp" class="card-img-top" alt="кавоварка зернова" />
@@ -854,8 +852,10 @@
               </p>
               <p class="lh-sm">
                 Ця модель підходить для невеликих офісів та магазинів, де важливі економія простору та надійність.
+              </p>
               <p class="lh-sm">
-                Minibona 2 може приготувати різні види кави та гарячих напоїв, забезпечуючи швидке обслуговування клієнтів.
+                Minibona 2 може приготувати різні види кави та гарячих напоїв, забезпечуючи швидке обслуговування
+                клієнтів.
               </p>
               <p class="lh-sm">
                 До 24 смачних варіацій кави.
@@ -881,7 +881,7 @@
           </div>
         </div>
       </div>
-      <div id="anhcor-multibona" class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-multibona" class="col-md-4 mb-2 mt-2">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/Multibona.webp" class="card-img-top" alt="кавомашина для магазину" />
@@ -927,11 +927,13 @@
             <br />
             <small>
               <p class="lh-sm">
-                Multibona 3 — високопродуктивна кавомашина для великих офісів, АЗС, готелів і місць з високим трафіком. Оснащена 
+                Multibona 3 — високопродуктивна кавомашина для великих офісів, АЗС, готелів і місць з високим трафіком.
+                Оснащена
                 сенсорним дисплеєм і сучасною системою приготування напоїв.
               </p>
               <p class="lh-sm">
-                Ця модель дозволяє створювати індивідуальні рецепти, має великий об’єм бункерів та підтримує підключення до водопроводу.
+                Ця модель дозволяє створювати індивідуальні рецепти, має великий об’єм бункерів та підтримує підключення
+                до водопроводу.
               </p>
               <p class="lh-sm">
                 10+ варіантів напоїв (включно з гарячим шоколадом)
@@ -955,6 +957,7 @@
         </div>
       </div>
     </div>
+  </div>
   <div class="description container">
     <div class="row">
       <div class="col"></div>
@@ -983,8 +986,8 @@
       <div class="col"></div>
     </div>
   </div>
-  <!-- /////////////////////////////////////////   Mashines    ////////////////////////////////////////     -->
   <div class="container hr-line"></div>
+  <!-- /////////////////////////////////////////   Mashines    ////////////////////////////////////////     -->
   <div class="container cards">
     <div class="row">
       <div class="col col-auto col-sm-6 col-md-4 mb-1">
@@ -1035,10 +1038,13 @@
               <p class="lh-sm">
                 Це універсальна кавомашина, яка поєднує в собі стильний дизайн та високі технічні характеристики.
               </p>
-              <p class="lh-sm">Вона може приготувати широкий спектр гарячих напоїв, включаючи каву та чай, що робить її ідеальним вибором для офісів, АЗС та магазинів.</p>
-              <p class="lh-sm">Основною перевагою є чудовий смак напоїв та мінімум зусиль для обслуговування та завантаження продукції.</p>
+              <p class="lh-sm">Вона може приготувати широкий спектр гарячих напоїв, включаючи каву та чай, що робить
+                її ідеальним вибором для офісів, АЗС та магазинів.</p>
+              <p class="lh-sm">Основною перевагою є чудовий смак напоїв та мінімум зусиль для обслуговування та
+                завантаження продукції.</p>
               <p class="lh-sm">
-                Запатентована технологія для максимального енергозбереження забезпечує високу продуктивність та зниження енергоспоживання.
+                Запатентована технологія для максимального енергозбереження забезпечує високу продуктивність та
+                зниження енергоспоживання.
               </p>
               <p class="lh-sm">
                 Гнучкі конфігурації машини сприяють високій продуктивності та широкому вибору напоїв.
@@ -1049,7 +1055,6 @@
               <p class="lh-sm">
                 Від 50 чашок в день.
               </p>
-              
               <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>580 мм х 600 мм х 712 мм</li>
                                 <li><b>Потужність: </b>1,8 кВт</li>
@@ -1111,10 +1116,10 @@
                 Завдяки сенсорному дисплею і простому меню, користування стає максимально зручним.
               </p>
               <p class="lh-sm">
-                8-дюймовий сенсорний інтерфейс. 
+                8-дюймовий сенсорний інтерфейс.
               </p>
               <p class="lh-sm">
-                Контейнер для кави на 1,3 кг, з можливістю збільшення до 2,3 кг. 
+                Контейнер для кави на 1,3 кг, з можливістю збільшення до 2,3 кг.
               </p>
               <p class="lh-sm">
                 Два бункери для розчинних інгредієнтів.
@@ -1178,13 +1183,13 @@
             <br />
             <small>
               <p class="lh-sm">
-                Надійність та продуктивність Desia знаходяться на самому високому рівні. 
+                Надійність та продуктивність Desia знаходяться на самому високому рівні.
               </p>
               <p class="lh-sm">
-                Завдяки сенсорному дисплею і простому меню, користування стає максимально зручним. 
+                Завдяки сенсорному дисплею і простому меню, користування стає максимально зручним.
               </p>
               <p class="lh-sm">
-                10-дюймовий сенсорний інтерфейс. 
+                10-дюймовий сенсорний інтерфейс.
               </p>
               <p class="lh-sm">
                 Контейнер для кави на 1,3 кг, з можливістю збільшення до 2,3 кг.
@@ -1193,7 +1198,7 @@
                 Три бункери для розчинних інгредієнтів.
               </p>
               <p class="lh-sm">
-                Простора відкрита зона видачі. 
+                Простора відкрита зона видачі.
               </p>
               <p class="lh-sm">
                 Від 60 чашок в день.
